// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comparator JSDoc Ignore Cases > ignored method keeps original signature 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,5 +1,6 @@
export interface WithIgnoredMethod {
  /** @ignore */
  legacyMethod(input: string): boolean;
+
  normalMethod(): void;
}"
`;

exports[`Comparator JSDoc Ignore Cases > ignored property keeps original type 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,5 +1,6 @@
export interface WithIgnoredProperty {
  /** @ignore */
  legacyField: string;
+
  normalField: number;
}"
`;
